# div_fem

./: .antigravity_rules.md  .gitignore  AI_AGENT_RULES.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: format-python.yml  python-tests.yml
src/div_fem/: __init__.py
src/div_fem/algorithms/integration/: gauss_quadrature.py
src/div_fem/algorithms/operations/: __init__.py  array_scalar_multiplication.py  back_substitution.py  forward_elimination.py  lu_decomposition.py  matrix_multiplication.py  matrix_vector_multiplication.py  solve_system.py
src/div_fem/algorithms/optimization/: mesh_dof_ga.py
src/div_fem/fem_analysis/: __init__.py  structural_2d_analysis.py
src/div_fem/fem_analysis/geometry/: boundaries_conditions.py  boundary_condition.py  boundary_conditions.py  elements_container.py  elements_interface.py  main_geometry_types.py  point.py  points.py
src/div_fem/fem_analysis/global_entities/: __init__.py  forces_vector.py  stiffness_matrix.py
src/div_fem/fem_analysis/loads/: element_2D_loads.py
src/div_fem/fem_analysis/local_entities/: __init__.py  (+2 more)
src/div_fem/matrices/: __init__.py  base_matrix.py  base_vector.py  lu_decomposition.py  main_types.py  operations.py
tests/algorithms/integration/: test_gauss_quadrature.py
tests/algorithms/operations/: test_operations.py
tests/fem_analysis/geometry/: test_boundaries_conditions.py  test_boundary_condition.py  test_elements_container.py  test_point.py  test_points.py
tests/matrices/: test_base_matrix.py  test_base_vector.py
tests/utils/descriptors/: test_descriptor_private_name.py
(+16 files in other folders)
